fix(ui): remove double border on instance info accordion
Changed .ff-accordion margin-bottom from 0 to -1px to eliminate
the visual double border that appeared between the accordion and
the table element above it.

--- a/frontend/src/stylesheets/pages/project.scss
+++ b/frontend/src/stylesheets/pages/project.scss
@@ -33,7 +33,7 @@
         }
     }
     .ff-accordion {
-        margin-bottom: 0;
+        margin-bottom: -1px;
     }
     .ff-accordion--content {
         background-color: white;
